--- a/examples/log-ingestion/fluent-bit.conf
+++ b/examples/log-ingestion/fluent-bit.conf
@@ -1,15 +1,33 @@
+[SERVICE]
+    Flush        1
+    Daemon       Off
+    Log_Level    info
+
 [INPUT]
-  name                  tail
-  refresh_interval      5
-  path                  /var/log/test.log
-  read_from_head        true
+    Name                  tail
+    Path                  /var/log/test.log
+    Tag                   apache.log
+    Refresh_Interval      1
+    Read_From_Head        true
+    Skip_Long_Lines       On
+    DB                    /fluent-bit/state.db
+    DB.Sync               Normal
+
+# Optional: tag enrichment
+[FILTER]
+    Name   record_modifier
+    Match  apache.log
+    Record log_type apache_access
 
 [OUTPUT]
-  Name http
-  Match *
-  Host data-prepper
-  Port 2021
-  URI /log/ingest
-  Format json
-  HTTP_User admin
-  HTTP_Passwd admin
+    Name        http
+    Match       apache.log
+    Host        data-prepper
+    Port        2021
+    URI         /log/ingest
+    Format      json
+    Json_Date_Key date
+    Json_Date_Format iso8601
+    Retry_Limit 5
+    HTTP_User   admin
+    HTTP_Passwd admin
