--- a/examples/log-ingestion/docker-compose.yaml
+++ b/examples/log-ingestion/docker-compose.yaml
@@ -1,46 +1,70 @@
 version: '3'
+
 services:
-  fluent-bit:
-    container_name: fluent-bit
-    image: docker.io/fluent/fluent-bit
-    volumes:
-      - ./fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
-      - ./test.log:/var/log/test.log
-    networks:
-      - opensearch-net
   opensearch:
     container_name: opensearch
     image: docker.io/opensearchproject/opensearch:latest
     environment:
       - discovery.type=single-node
-      - bootstrap.memory_lock=true # along with the memlock settings below, disables swapping
-      - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m" # minimum and maximum Java heap size, recommend setting both to 50% of system RAM
+      - bootstrap.memory_lock=true
+      - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
       - "OPENSEARCH_INITIAL_ADMIN_PASSWORD=Developer@123"
     ulimits:
       memlock:
         soft: -1
         hard: -1
       nofile:
-        soft: 65536 # maximum number of open files for the OpenSearch user, set to at least 65536 on modern systems
+        soft: 65536
         hard: 65536
     ports:
-      - 9200:9200
-      - 9600:9600 # required for Performance Analyzer
+      - "9200:9200"
+      - "9600:9600"  # Performance Analyzer
     networks:
       - opensearch-net
+
   dashboards:
-    image: docker.io/opensearchproject/opensearch-dashboards:latest
     container_name: opensearch-dashboards
-    ports:
-      - 5601:5601
-    expose:
-      - "5601"
+    image: docker.io/opensearchproject/opensearch-dashboards:latest
     environment:
       OPENSEARCH_HOSTS: '["https://opensearch:9200"]'
     depends_on:
       - opensearch
+    ports:
+      - "5601:5601"
+    expose:
+      - "5601"
+    networks:
+      - opensearch-net
+
+  data-prepper:
+    container_name: data-prepper
+    image: docker.io/opensearchproject/data-prepper:2
+    volumes:
+      # pipeline config (defines source→processor→sink)
+      - ./log_pipeline.yaml:/usr/share/data-prepper/pipelines/log_pipeline.yaml
+      # runtime config (basic server/config API auth, etc.)
+      - ./data-prepper-config.yaml:/usr/share/data-prepper/config/data-prepper-config.yaml
+    ports:
+      # Expose the ingestion port so Fluent Bit (and you if you want to debug) can reach it
+      - "2021:2021"
+    networks:
+      - opensearch-net
+    depends_on:
+      - opensearch
+
+  fluent-bit:
+    container_name: fluent-bit
+    image: docker.io/fluent/fluent-bit
+    volumes:
+      # Fluent Bit config
+      - ./fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
+      # The test log file you append to
+      - ./test.log:/var/log/test.log
+    depends_on:
+      - data-prepper
     networks:
       - opensearch-net
 
 networks:
   opensearch-net:
+    driver: bridge
