--- a/examples/log-ingestion/log_pipeline.yaml
+++ b/examples/log-ingestion/log_pipeline.yaml
@@ -1,11 +1,14 @@
 log-pipeline:
   source:
     http:
+      port: 2021
       ssl: false
+
   processor:
     - grok:
         match:
           log: [ "%{COMMONAPACHELOG}" ]
+
   sink:
     - opensearch:
         hosts: [ "https://opensearch:9200" ]
