--- a/examples/log-ingestion/fluent-bit.conf
+++ b/examples/log-ingestion/fluent-bit.conf
@@ -1,33 +1,93 @@
-[SERVICE]
-    Flush        1
-    Daemon       Off
-    Log_Level    info
-
+####### SYSLOG / AUTH / MESSAGES #######
 [INPUT]
-    Name                  tail
-    Path                  /var/log/test.log
-    Tag                   apache.log
-    Refresh_Interval      1
-    Read_From_Head        true
-    Skip_Long_Lines       On
-    DB                    /fluent-bit/state.db
-    DB.Sync               Normal
-
-# Optional: tag enrichment
-[FILTER]
-    Name   record_modifier
-    Match  apache.log
-    Record log_type apache_access
+    Name              tail
+    Path              /host/var/log/syslog,/host/var/log/messages,/host/var/log/auth.log
+    Tag               syslog.*
+    Read_from_head    true
+    Refresh_Interval  5
 
 [OUTPUT]
-    Name        http
-    Match       apache.log
-    Host        data-prepper
-    Port        2021
-    URI         /log/ingest
-    Format      json
-    Json_Date_Key date
-    Json_Date_Format iso8601
-    Retry_Limit 5
-    HTTP_User   admin
-    HTTP_Passwd admin
+    Name              http
+    Match             syslog.*
+    Host              data-prepper
+    Port              2021
+    URI               /syslog/ingest
+    Format            json
+    HTTP_User         admin
+    HTTP_Passwd       admin
+
+
+####### APACHE / NGINX ACCESS LOGS #######
+[INPUT]
+    Name              tail
+    Path              /host/var/log/httpd/access.log,/host/var/log/nginx/access.log,/host/var/log/test.log
+    Tag               apache.*
+    Read_from_head    true
+    Refresh_Interval  5
+
+[OUTPUT]
+    Name              http
+    Match             apache.*
+    Host              data-prepper
+    Port              2021
+    URI               /apache/ingest
+    Format            json
+    HTTP_User         admin
+    HTTP_Passwd       admin
+
+
+####### DATABASE AUDIT LOGS #######
+[INPUT]
+    Name              tail
+    Path              /host/var/log/db_audit.log
+    Tag               dbaudit.*
+    Read_from_head    true
+    Refresh_Interval  5
+
+[OUTPUT]
+    Name              http
+    Match             dbaudit.*
+    Host              data-prepper
+    Port              2021
+    URI               /db/ingest
+    Format            json
+    HTTP_User         admin
+    HTTP_Passwd       admin
+
+
+####### SNMP TRAP SERVER LOGS #######
+[INPUT]
+    Name              tail
+    Path              /host/var/log/snmptrapd.log
+    Tag               traps.*
+    Read_from_head    true
+    Refresh_Interval  5
+
+[OUTPUT]
+    Name              http
+    Match             traps.*
+    Host              data-prepper
+    Port              2021
+    URI               /traps/ingest
+    Format            json
+    HTTP_User         admin
+    HTTP_Passwd       admin
+
+
+####### APPLICATION DEBUG / CUSTOM LOGS #######
+[INPUT]
+    Name              tail
+    Path              /host/var/log/myapp/debug.log
+    Tag               appdebug.*
+    Read_from_head    true
+    Refresh_Interval  5
+
+[OUTPUT]
+    Name              http
+    Match             appdebug.*
+    Host              data-prepper
+    Port              2021
+    URI               /appdebug/ingest
+    Format            json
+    HTTP_User         admin
+    HTTP_Passwd       admin
