--- a/examples/log-ingestion/log_pipelines.yaml
+++ b/examples/log-ingestion/log_pipelines.yaml
@@ -19,29 +19,6 @@ apache-pipeline:
         password: Developer@123
         index: apache_logs
 
-syslog-pipeline:
-  source:
-    http:
-      ssl: false
-      path: /syslog/ingest
-      authentication:
-        http_basic:
-          username: admin
-          password: admin
-  processor:
-    - grok:
-        match:
-          log: [ "%{SYSLOGBASE} %{GREEDYDATA:message}" ]
-        # SYSLOGBASE extracts timestamp/host/program/pid, etc.
-        # message will be the remainder.
-  sink:
-    - opensearch:
-        hosts: [ "https://opensearch:9200" ]
-        insecure: true
-        username: admin
-        password: Developer@123
-        index: syslog_logs
-
 db-audit-pipeline:
   source:
     http:
@@ -95,3 +72,24 @@ app-debug-pipeline:
         username: admin
         password: Developer@123
         index: app_debug_logs
+
+syslog-pipeline:
+  source:
+    http:
+      ssl: false
+      path: "/syslog/ingest"
+      authentication:
+        http_basic:
+          username: admin
+          password: admin
+  processor:
+    - grok:
+        match:
+          log: [ "%{GREEDYDATA:message}" ]
+  sink:
+    - opensearch:
+        hosts: [ "https://opensearch:9200" ]
+        insecure: true
+        username: admin
+        password: Developer@123
+        index: syslog_logs
